[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
anyhow="1.0.58"
base64ct = { version = "1.5.3", features = ["std"] }
sha-1 = "0.10.0"

