[package]
name = "symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.29.0"
memmap2 = "0.5.8"
anyhow="1.0.58"
symbolic-common="8.5.0"
symbolic-demangle="8.5.0"
symbolic-debuginfo="8.5.0"
pdb = "0.8.0"
goblin = "0.6"